[tool.poetry]
name = "graia-protocol-aiohttp-mirai"
version = "0.0.1"
description = ""
authors = ["Chenwe-i-lin <1846913566@qq.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
graia-broadcast = "^0.0.1"
graia-protocol-core = "^0.0.1"
aiohttp = "^3.6.2"
pydantic = "^1.5.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
